Chrome: prevent page break on too long links makes it for tabs #div_Activity and #div_Info only
git-svn-id: svn+ssh://svn.lablz.com/hosts/trunk/hosts@14215 483a4429-297d-4d5f-a489-5c5d2c303994

--- a/styles/common-template.css
+++ b/styles/common-template.css
@@ -737,7 +737,7 @@ table.rightPanel {border:solid #808080 1px; background-color: #eeeeee; color: #0
 }
 
 /* Chrome: prevent page break on too long links */
-.rop1 div { max-width: 750px; word-wrap: break-word; }
+#div_Activity div, #div_Info div { max-width: 750px; word-wrap: break-word; }
 
 #siteResourceList .rop {
   border:solid &[PrimaryColor_1]; 1px; 
